Changes in 1.1.56

o Typos in documentation corrected.

o When records with too short follow-up are encountered by Lexis, they
  are dropped from the resulting object, but they will be availabe in
  the object drop.sh in the global environment.

o The col and border arguments to plot.pState were not repeated
  automatically, so needed fixing.

Changes in 1.1.55

o Documentation of clogistic is clarified w.r.t. likelihood
  contributions of matched sets.

Changes in 1.1.54

o apc.fit updated to use the Ns wrapper, and automatically use knots
  located so that the marginal number of events is the same between
  knots.

o plot.apc and lines.apc defined as methods for apc objects. They are
  just wrappers for apc.plot and apc.lines.

o gen.exp example slightly modified to give better output.

Changes in 1.1.53

o Population figures in N.dk, M.dk and Y.dk updated

Changes in 1.1.52

o col.txt argument to plotEst was not working properly. Fixed

o txt argument to plotEst can now be an expression vector allowing
  sub- and superscripts and mathematical expressions.

o Relevel did not issue warning or error when a given level was being
  specified as member of more than one new level. It now stops with an
  error.

o The convenience wrappers Ns (for ns) and NArray (for array) have
  been added

Changes in 1.1.51

o boxes.Lexis fixed so that rates could be computed from matrix input
  to.

Changes in 1.1.50

o Calculation of p-values in ci.lin has been modified, thyanks to
  Krista Fischer.

Changes in 1.1.49

o Default of "border" argument to plot.pState changed to "transparent"

Changes in 1.1.48

o Slight tidying of code in apc.fit. Automatic determination of
  reference points for period and cohort fixed to produce median
  correctly.

Changes in 1.1.47

o Bug in simLexis (specifically in Epi:::simX) where factor levels
  were wrongly used, is now corrected. Versions earlier are likely to
  produce wrong state allocation in simulated dataset and not crash.
